--- a/frontend_jurassic_park/public/css/styles.css
+++ b/frontend_jurassic_park/public/css/styles.css
@@ -13,6 +13,7 @@ html, body {
   height: 350px;
   background-image: url("../images/menu_bck.jpg");
   background-size: 300px 300px;
+  margin-top: 50px;
   background-repeat: repeat-y;
   float: left;
   -webkit-box-shadow: 15px 18px 16px -12px rgba(74,72,74,0.56);
@@ -43,10 +44,9 @@ html, body {
 }
 
 .paddock-details {
-  width: 300px;
-  height: 300px;
+  width: 540px;
+  height: 320px;
   background-color: #636f6e;
-  opacity: 0.9;
   position: absolute;
   z-index: 500;
   border-radius: 8px;
@@ -55,4 +55,43 @@ html, body {
   transform: translate(-50%, -50%);
   color: white;
   padding-bottom: 10px;
+}
+.dino-list {
+  margin-top: 30px;
+  overflow-y: scroll;
+  width: 530px;
+  height: 260px;
+}
+.close {
+  float: right;
+  position: relative;
+  width: 23px;
+	height: 23px;
+	border: 2px solid #eef5df;
+	background-color: #ff5248;
+  content: 'X';
+	border-top-right-radius: 8px;
+}
+.dino-image {
+  height: 60px;
+  width: 60px;
+}
+
+.dino-type {
+  height: 20px;
+  width: 20px;
+}
+
+.low-energy {
+  background-color: red;
+  width: 100%;
+  height: 18px;
+  border-radius: 3px;
+}
+
+.high-energy {
+  background-color: #3ef13e;
+  height: 18px;
+  border-radius: 3px;
+  content: "🍖";
 }
