fixed dino tranfer  to paddocks

--- a/frontend_jurassic_park/public/css/styles.css
+++ b/frontend_jurassic_park/public/css/styles.css
@@ -63,15 +63,30 @@ html, body {
   height: 260px;
 }
 .close {
-  float: right;
+  /* float: right;
   position: relative;
   width: 23px;
 	height: 23px;
 	border: 2px solid #eef5df;
 	background-color: #ff5248;
   content: 'X';
-	border-top-right-radius: 8px;
+	border-top-right-radius: 8px; */
+
+ float: right;
+  box-sizing:border-box;
+  width:20px;
+  height:20px;
+  border-width:3px;
+  border-style: solid;
+  border-color:#aeaeae;
+  border-radius:100%;
+  background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%);
+  background-color:#aeaeae;
+  /* box-shadow:0px 0px 5px 2px rgba(0,0,0,0.5); */
+  transition: all 0.3s ease;
 }
+
+
 .dino-image {
   height: 60px;
   width: 60px;
@@ -94,4 +109,9 @@ html, body {
   height: 18px;
   border-radius: 3px;
   content: "🍖";
+}
+
+.form-paddock {
+  padding-top: 60px;
+
 }
