--- a/frontend_jurassic_park/public/css/styles.css
+++ b/frontend_jurassic_park/public/css/styles.css
@@ -1,24 +1,24 @@
 html, body {
-  height: 100%;
+  background: url("../images/bck.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .park {
-  background-image: url("../images/bck.jpg");
-  background-size: 70% 90%;
   height: 100%;
   width: 100%;
 }
 .menu {
-  width: 250px;
-  height: 350px;
-  background-image: url("../images/menu_bck.jpg");
-  background-size: 300px 300px;
-  margin-top: 50px;
+  width: 300px;
+  height: 500px;
+  background-image: url("../images/menu.png");
+  background-size: 250px 250px;
+  margin-top: -2px;
+  margin-left: 20px;
   background-repeat: repeat-y;
   float: left;
-  -webkit-box-shadow: 15px 18px 16px -12px rgba(74,72,74,0.56);
-  -moz-box-shadow: 15px 18px 16px -12px rgba(74,72,74,0.56);
-  box-shadow: 15px 18px 16px -12px rgba(74,72,74,0.56);
 }
 
 #root {
@@ -27,20 +27,92 @@ html, body {
 .menu-container {
   height: 100%
 }
+.create-dino-form {
+  padding-top: 70px;
+  padding-left: 30px;
+  width: 190px;
+}
 
+.create-dino-form h3{
+  color: white;
+  padding-left: 20px;
+}
+
+.create-paddock-form {
+  padding-top: 105px;
+  padding-left: 30px;
+  width: 190px;
+}
+
+.create-paddock-form h3{
+  color: white;
+  padding-left: 20px;
+}
+
+input[type=text], select {
+  width: 100%;
+  padding: 4px 20px;
+  margin: 5px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+button[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 5px 5px;
+  margin: 5px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.dino-create h3{
+  padding-left: 20px;
+  color: white;
+}
+
+.paddock-create {
+  margin-top:180px;
+  margin-left: 40px;
+}
+
+.paddock-create h3{
+  padding-left: 20px;
+  color: white;
+}
 .paddock {
   background-image: url("../images/paddo.png");
-  background-size: 160px 170px;
+  background-size: 130px 110px;
   background-repeat: no-repeat;
-  width: 150px;
+  width: 140px;
   height: 150px;
   margin-right: 30px;
 }
 
 .list-paddocks{
+  padding-top: 50px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+}
+
+.windows {
+  background-image: url("../images/windows.png");
+  background-size: 650px 420px;
+  background-repeat: no-repeat;
+  width: 650px;
+  height: 420px;
+  position: absolute;
+  z-index: 600;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .paddock-details {
@@ -62,17 +134,40 @@ html, body {
   width: 530px;
   height: 260px;
 }
-.close {
-  /* float: right;
-  position: relative;
-  width: 23px;
-	height: 23px;
-	border: 2px solid #eef5df;
-	background-color: #ff5248;
-  content: 'X';
-	border-top-right-radius: 8px; */
+.dino-list table{
+  width: 100%;
+}
 
- float: right;
+.dino-list select{
+  width: 80%;
+}
+.dino-list button{
+  background-color:
+}
+
+.dino-alert {
+  background-image: url("../images/dino-alert.png");
+  background-size: 650px 420px;
+  background-repeat: no-repeat;
+  width: 650px;
+  height: 420px;
+  position: absolute;
+  z-index: 700;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.save {
+  background-image: url("../images/save.png");
+  background-size: 20px 20px;
+  width: 20px;
+  height: 20px;
+  background-color: none;
+}
+
+.close {
+  float: right;
   box-sizing:border-box;
   width:20px;
   height:20px;
@@ -108,10 +203,40 @@ html, body {
   background-color: #3ef13e;
   height: 18px;
   border-radius: 3px;
-  content: "🍖";
 }
 
-.form-paddock {
-  padding-top: 60px;
+.visitor {
+  float: right;
+  top: 10px;
+  background-color: orange;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  border-width:3px;
+  border-style: solid;
+  border-color:#fff;
+}
 
+.visitor div {
+  padding-top: 10px;
+  text-align: center;
+}
+
+.alert {
+  background-image: url("../images/alert.gif");
+  background-size: 200px 200px;
+  width: 200px;
+  height: 200px;
+  float: right;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display:block;
 }
