changed style in paddock-list

--- a/frontend_jurassic_park/public/css/styles.css
+++ b/frontend_jurassic_park/public/css/styles.css
@@ -128,6 +128,12 @@ input[type=submit]:hover {
   color: white;
   padding-bottom: 10px;
 }
+
+.paddock-details span {
+  font-weight: bold;
+  text-align: center;
+
+}
 .dino-list {
   margin-top: 30px;
   overflow-y: scroll;
