--- a/frontend_jurassic_park/public/css/styles.css
+++ b/frontend_jurassic_park/public/css/styles.css
@@ -132,7 +132,12 @@ input[type=submit]:hover {
 .paddock-details span {
   font-weight: bold;
   text-align: center;
+}
 
+.paddock-name{
+  width: 100%;
+  text-align: center;
+  text-decoration:underline;
 }
 .dino-list {
   margin-top: 30px;
